setup for bintray

--- a/dotsloader/build.gradle
+++ b/dotsloader/build.gradle
@@ -13,27 +13,12 @@ buildscript {
 }
 
 ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'dotsloader'
-
-    publishedGroupId = 'com.agrawalsuneet.dotsloader'
-    libraryName = 'DotsLoader'
     artifact = 'dotsloader'
+    bintrayName = 'dotsloader'
+}
 
-    libraryDescription = 'A replacement for default android progress bar with a customizable dots loader'
-
-    siteUrl = 'https://github.com/agrawalsuneet/DotsLoader'
-    gitUrl = 'https://github.com/agrawalsuneet/DotsLoader.git'
-
-    libraryVersion = '1.0'
-
-    developerId = 'agrawalsuneet'
-    developerName = 'Suneet Agrawal'
-    developerEmail = 'agrawalsuneet@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
+configurations {
+    javadocDeps
 }
 
 android {
@@ -44,7 +29,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
     }
     buildTypes {
         release {
@@ -57,7 +42,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.0'
+    javadocDeps 'com.android.support:support-annotations:25.1.0'
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+task bintray {
+    apply from: '../install.gradle'
+    apply from: '../bintray.gradle'
+}
