--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/Users/Suneet/Documents/Android-SDK/sdk
+bintray.user=agrawalsuneet
+bintray.apikey=523f23ea9d1e805ae58c6a23feb98311c7995af5
