--- a/bintray.gradle
+++ b/bintray.gradle
@@ -58,7 +58,7 @@ bintray {
         version {
             desc = 'a replacement of default android material progressbar with dots loader'
             gpg {
-                sign = false //Determines whether to GPG sign the files. The default is false
+                sign = true //Determines whether to GPG sign the files. The default is false
                 passphrase = properties.getProperty("bintray.gpg.password")
                 //Optional. The passphrase for GPG signing'
             }
