--- a/local.properties
+++ b/local.properties
@@ -7,7 +7,7 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 27 13:09:32 IST 2017
+#Mon Feb 27 21:16:37 IST 2017
 bintray.apikey=523f23ea9d1e805ae58c6a23feb98311c7995af5
-sdk.dir=/home/shotang/Android/Sdk
+sdk.dir=D\:\\Android\\Android_SDK
 bintray.user=agrawalsuneet
