--- a/dotsloader/build.gradle
+++ b/dotsloader/build.gradle
@@ -44,3 +44,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     javadocDeps 'com.android.support:support-annotations:25.1.0'
 }
+
+apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
