--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Aug 03 21:07:57 IST 2017
-sdk.dir=/Users/ballu/Documents/Android/sdk
+#Thu Sep 14 12:22:14 BST 2017
+sdk.dir=/Users/suneet/Library/Android/sdk
