--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ buildscript {
     ext.kotlin_version = '1.1.3-2'
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
