--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:label="SlidingLoader">
+        <activity
+            android:name=".MainActivity"
+            android:label="RotatingCircularDotsLoader">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
