--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ captures/
 
 # Intellij
 *.iml
+.idea
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -41,6 +42,9 @@ captures/
 .idea/libraries
 .idea/cache
 .idea/misc.xml
+.idea/caches
+.idea/codeStyles
+.idea/modules.xml
 
 # Keystore files
 *.jks
