--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation project(':dotsloader')
     //implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
